--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;game ball webpage</h1>
 		<hr>
 		<p><li>softwares:</li><strong><ul>
-		<a href="/softwares/ target = "_blank">download softwares</a></ul></strong>
+		<a href="/softwares/" target = "_blank">download softwares</a></ul></strong>
         <br> </p>
 		<hr>
 		<a href="https://www.youtube.com/channel/UC0eiRysxYnpqxyhHRlsTRRA"> 
