--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 	    <hr>
 	    <h1 id = "heading1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
-		&nbsp;&nbsp;&nbsp;&nbsp;game ball webpage</h1>
+		    &nbsp;&nbsp;&nbsp;&nbsp;<i>game ball webpage</i></h1>
 		<hr>
 		<p><li>softwares:</li><strong><ul>
 		<a href="/softwares/" target = "_blank">download softwares</a></ul></strong>
