--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	    <h1 id = "heading1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 		    &nbsp;&nbsp;&nbsp;&nbsp;<i>game ball webpage</i></h1>
 		<hr>
-		<img src = "gb-tube.png" width = 500 height = 400>
+		<img src = "gb-tube.png" width = 550 height = 400 id = "img0">
+		<img src = "gb-tube.png" width = 550 height = 400 id = "img1">
 		<hr>
 		<p><li>softwares:</li><strong><ul>
 		<a href="/softwares/" target = "_blank">download softwares</a></ul></strong>
