--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		};
 		function animate__bottom(){
 			$("#bottom").slideUp(4000).slideDown(4000);
+			$("#img0").slideUp(3000).slideDown(3000);
+			$("#img1").slideUp(3000).slideDown(3000);
 		};
 		setInterval(animate_heading1,100)
 		setInterval(animate__bottom,100)
