--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 	<script type="text/javascript">
 		function animate_heading1(){
 			$("#heading1").fadeOut(3000).fadeIn(3000);
+			$("#img0").fadeOut(3000).fadeIn(3000);
+			$("#img1").fadeOut(3000).fadeIn(3000);
 		};
 		function animate__bottom(){
 			$("#bottom").slideUp(4000).slideDown(4000);
-			$("#img0").slideUp(3000).slideDown(3000);
-			$("#img1").slideUp(3000).slideDown(3000);
 		};
 		setInterval(animate_heading1,100)
 		setInterval(animate__bottom,100)
