--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<script type="text/javascript">
 		function animate_heading1(){
 			$("#heading1").fadeOut(3000).fadeIn(3000);
+		};
+		function anime(){
 			$("#img0").fadeOut(3000).fadeIn(3000);
 			$("#img1").fadeOut(3000).fadeIn(3000);
 		};
@@ -47,5 +49,6 @@
 		};
 		setInterval(animate_heading1,100)
 		setInterval(animate__bottom,100)
+		setInterval(anime,6000)
 	</script>
 </html>
