--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		   game ball software youtube channel
 		</a>
 		<p id="bottom">
-		<hr>&lt;&lt;&lt;&copy;game ball
+		<hr>&lt;&lt;&lt;&copy;ADAM-TECH
 		&gt;&gt;&gt;<br>
 		<address>
 		    all copyrights reserved
